--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -84,7 +84,7 @@ And making use of Lemma \ref{lem:cancellation} we obtain
 \begin{myprop}The total swirling is \( \refl_0 \) in \( Tm=Tm \).\label{prop:total_swirling}
 \end{myprop}
 \begin{myproof}We can compute
-\[\sum_F\sigma^X_F=\left[\sum_{(\mathrm{edges\ }e_{ij})}\sigma_{ij}+\sigma_{ji}\right]=_{Tm=Tm}\refl_0.\]
+\[\sum_F\sigma^X_F=\left[\sum_{(\mathrm{edges\ }e_{ij})}\sigma_{ij}+\sigma_{ji}\right]=_{Tm=Tm}\refl_0.\qedhere\]
 \end{myproof}
 
 And finally, if we give the loop map \( \loopy \) the nickname ``winding number'':
