complete revision of first 2 sections of talk

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,fleqn]{article}
 \usepackage{greg}
 %\usepackage[vvarbb,libertinus]{newtx}
-\usepackage{fontspec}
+%\usepackage{fontspec}
 \usepackage{titlesec}
 \usepackage{titling}
 \usepackage[nottoc]{tocbibind}
