--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_connections.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_connections.tex
@@ -1,26 +1,67 @@
 \section{Connections and curvature}
 
-\begin{frame}{What we hope to capture and explain}
-  \( \vcenter{\hbox{\includegraphics[width=30mm]{figs/curved_cube/curved_cube1}}} \!\!\to\!\! \)
-  \( \vcenter{\hbox{\includegraphics[width=30mm]{figs/curved_cube/curved_cube2}}}\!\!\to\!\! \)
-  \( \vcenter{\hbox{\includegraphics[width=30mm]{figs/curved_cube/curved_cube3}}}\!\!\to\!\! \)
-  \( \vcenter{\hbox{\includegraphics[width=30mm]{figs/curved_cube/curved_cube4}}}\!\!\to\!\! \)
-  \( \vcenter{\hbox{\includegraphics[width=30mm]{figs/curved_cube/curved_cube5}}}\!\!\to\!\! \)
-  \( \vcenter{\hbox{\includegraphics[width=30mm]{figs/curved_cube/curved_cube6}}}\!\!\to\!\! \)
-  \( \vcenter{\hbox{\includegraphics[width=30mm]{figs/curved_cube/curved_cube7}}}\!\!\to\!\! \)
-  \( \vcenter{\hbox{\includegraphics[width=30mm]{figs/curved_cube/curved_cube8}}} \)
+\begin{frame}{Connections}
+Connections are extensions of the bundle to higher skeleta.
 \end{frame}
 
-\begin{frame}{\( T:\mm\to\EMzo \) extending \( \link \)}
-We define \( T \) on edges by imaginging \alert{tipping}:
+\begin{frame}{Recall \( \link \)}
+\begin{columns}
+\begin{column}{0.25\textwidth}
+\input{figs/discrete_gauge_theory_oo_link_tikz.tex}
+\end{column}
+\begin{column}{0.15\textwidth}
+\( \leftarrow\link(w) \)
+\end{column}
+\begin{column}{0.6\textwidth}
+The \defemph{link} of a vertex \( w \) in a 2-complex is: the sets not containing \( w \) but whose union with \( w \) is a face.\\~\\
+\end{column}
+\end{columns}
+\end{frame}
 
-\begingroup
+\begin{frame}{Connections on the tangent bundle}
+An extension \( T_1 \) of \( \link \) to \( \mm_1 \) is called \alert{a connection on the tangent bundle}.
+% https://q.uiver.app/#q=WzAsNCxbMSwxLCJcXEJBdXQoU14xKSJdLFswLDAsIlxcbW1fMCJdLFsxLDAsIlxcbW1fMSJdLFsyLDAsIlxcbW1fMiJdLFsxLDAsIlxcbGluayIsMl0sWzIsMCwiVF8xIiwwLHsic3R5bGUiOnsiYm9keSI6eyJuYW1lIjoiZGFzaGVkIn19fV0sWzMsMCwiIiwwLHsic3R5bGUiOnsiYm9keSI6eyJuYW1lIjoiZGFzaGVkIn19fV0sWzEsMl0sWzIsM11d
+\[\begin{tikzcd}[ampersand replacement=\&]
+  {\mm_0} \& {\mm_1} \& {\mm_2} \\
+  \& {\BAut(S^1)}
+  \arrow[from=1-1, to=1-2]
+  \arrow["\link"', from=1-1, to=2-2]
+  \arrow[from=1-2, to=1-3]
+  \arrow["{T_1}", dashed, from=1-2, to=2-2]
+  \arrow[dashed, from=1-3, to=2-2]
+\end{tikzcd}\]
+\end{frame}
+
+\begin{frame}{\( T_1:\mm_1\to\BAut(S^1) \) extending \( \link \)}
+We will define \( T_1 \) on the edge \( wb \), so we need a term \( T_1(wb):\link(w)=_{\BAut(S^1)}\link(b) \).
+
+We imagine tipping:
 \tikzset{every picture/.style={scale=0.85}}
-\input{figs/discrete_gauge_theory_oo_transport_tikz}
-\endgroup
-\( \tr(\partial(wbr)):Tw=Tw \) is clockwise rotation by one notch.
+\[\input{figs/discrete_gauge_theory_oo_transport_edge_tikz}\]
+\( T_1(g:\link(w))\defeq w:\link(b),\ldots \).
 
-We define \( T \) on the face \( wbr \) by the shortest homotopy \( T(wbr):\id=\tr(\partial(wbr)) \).
+Use this method to define \( T_1 \) on every edge.
+\end{frame}
+
+\begin{frame}{\( T_1:\mm_1\to\BAut(S^1) \) extending \( \link \)}
+Denote the path \( wb\cdot br\cdot rw \) by \alert{\( \partial(wbr) \)}.
+Consider \( T_1(\partial(wbr)) \):
+\tikzset{every picture/.style={scale=0.85}}
+\[\input{figs/discrete_gauge_theory_oo_transport_tikz}\]
+We come back rotated by 1/4 turn. Call this rotation \( R:\link(w)=_{BAut(S^1)}\link(w) \).
+\end{frame}
+
+\begin{frame}{Extending \( T_1 \) to a face}
+Let \( H_{wbr}:\refl_{w}=_{w=_{\mm}w}\partial(wbr) \) be the filler homotopy of the face.
+
+\onslide<2->{\( T_2 \) must live in \( T_1(\refl_{w})=_{(\link(w)=_{\BAut(S^1)}\link(w))}T_1(\partial(wbr))=R \)}
+
+\onslide<3->{\( T_2 \) must be a homotopy \( H_R:\id=R \) between automorphisms of \( \link(w) \).}
+
+\onslide<4->{For example, a path \( H_R(g):g=Rg=o \). Choose \( go \).}
+
+\tikzset{every picture/.style={scale=0.85}}
+\[\input{figs/discrete_gauge_theory_oo_transport_tikz}\]
 \end{frame}
 
 % \begin{frame}{Rotation}
@@ -36,9 +77,16 @@ We define \( T \) on the face \( wbr \) by the shortest homotopy \( T(wbr):\id=\
 % \end{proof}
 % \end{frame}
 
-\begin{frame}
+\begin{frame}{Original inspiration}
+  \( \vcenter{\hbox{\includegraphics[width=35mm]{figs/curved_cube/curved_cube1of4.pdf}}}\!\!\!\!\!\!\to\!\!\!\!\!\! \)
+  \( \vcenter{\hbox{\includegraphics[width=35mm]{figs/curved_cube/curved_cube2of4.pdf}}}\!\!\!\!\!\!\to\!\!\!\!\!\! \)
+  \( \vcenter{\hbox{\includegraphics[width=35mm]{figs/curved_cube/curved_cube3of4.pdf}}}\!\!\!\!\!\!\to\!\!\!\!\!\! \)
+  \( \vcenter{\hbox{\includegraphics[width=35mm]{figs/curved_cube/curved_cube4of4.pdf}}} \)
+\end{frame}
+
+\begin{frame}{The definition of a connection}
 \begin{definition}
-If \( \mm\defeq \mm_0\xrightarrow[]{\imath_0}\cdots\xrightarrow[]{\imath_{n-1}}\mm_n \) is a realization and all the triangles commute in the diagram:\vspace{-10pt}
+If \( \mm\defeq \mm_0\xrightarrow[]{\imath_0}\cdots\xrightarrow[]{\imath_{n-1}}\mm_n \) is a combinatorial manifold and all the triangles commute in the diagram:
 \[\begin{tikzcd}[ampersand replacement=\&, column sep=small]
   {\mm_0} \& {\mm_1} \& {\mm_2} \& \cdots \& {\mm_n} \\
 \&\& {\mathcal{U}}
@@ -50,7 +98,7 @@ If \( \mm\defeq \mm_0\xrightarrow[]{\imath_0}\cdots\xrightarrow[]{\imath_{n-1}}\
 \arrow["{f_2}", from=1-3, to=2-3]
 \arrow["{\imath_{n-1}}", from=1-4, to=1-5]
 \arrow["f_n"', from=1-5, to=2-3]
-\end{tikzcd}\]\vspace{-15pt}
+\end{tikzcd}\]
 \begin{itemize}
 \item The map \( f_k \) is a \defemph{\( k \)-bundle} on \( \mm \).
 \item The pair given by the map \( f_k \) and the proof \( f_k\circ \imath_{k-1}=f_{k-1} \), i.e. that \( f_k \) extends \( f_{k-1} \) is called a \defemph{\( k \)-connection on the \( (k-1) \)-bundle \( f_{k-1} \)}.
@@ -58,38 +106,48 @@ If \( \mm\defeq \mm_0\xrightarrow[]{\imath_0}\cdots\xrightarrow[]{\imath_{n-1}}\
 \end{definition}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{The definition of curvature}
 \begin{mydef}[cont.]
+\begin{columns}[t]
+\begin{column}{0.55\textwidth}
+The pushout consists of \( M_2 \)-many extensions:
 \[\begin{tikzcd}[ampersand replacement=\&, column sep=small]
-  {M_k\times \partial\Delta^k} \& {M_k} \\
-  {\mathbb{M}_{k-1}} \& {\mathbb{M}_k} \\
+  {M_2\times \partial\Dd(2)} \& {M_2} \\
+  {\mathbb{M}_{1}} \& {\mathbb{M}_2} \\
   \& {\mathcal{U}}
   \arrow["{\mathrm{pr}_1}", from=1-1, to=1-2]
-  \arrow["{\mathbb{A}_{k-1}}"', from=1-1, to=2-1]
-  \arrow["{*_{\mathbb{M}_k}}", from=1-2, to=2-2]
-  \arrow["{h_k}", shorten <=10pt, shorten >=10pt, Rightarrow, from=2-1, to=1-2]
-  \arrow["{\imath_{k-1}}", from=2-1, to=2-2]
-  \arrow[""{name=0, anchor=center, inner sep=0}, "{f_{k-1}}"', from=2-1, to=3-2]
+  \arrow["{\mathbb{A}_{1}}"', from=1-1, to=2-1]
+  \arrow["{}", from=1-2, to=2-2]
+  \arrow["{h_2}", shorten <=10pt, shorten >=10pt, Rightarrow, from=2-1, to=1-2]
+  \arrow["{}", from=2-1, to=2-2]
+  \arrow[""{name=0, anchor=center, inner sep=0}, "{T_{1}}"', from=2-1, to=3-2]
   \arrow["\ulcorner"{pos=-0.05, rotate=180}, shift left=1.5, draw=none, from=2-2, to=1-1]
-  \arrow["{f_k}", from=2-2, to=3-2]
-\end{tikzcd}
-\begin{tikzcd}[ampersand replacement=\&]
-  {\{F\}\times \partial\Delta^2} \& \unit \\
-  {\mathbb{M}_{k-1}} \& {\mathcal{U}}
-  \arrow["{!}", from=1-1, to=1-2]
-  \arrow["{\mathbb{A}_{k-1}}"', from=1-1, to=2-1]
-  \arrow["{*_{\mathbb{M}_k}}", from=1-2, to=2-2]
+  \arrow["{T_2}", from=2-2, to=3-2]
+  \arrow["{}", shorten >=3pt, Rightarrow, from=2-2, to=0]
+\end{tikzcd}\]
+\end{column}
+\begin{column}{0.45\textwidth}
+Here's the outer square for a single face \( F \):
+\[\begin{tikzcd}[ampersand replacement=\&]
+  {\{F\}\times \partial\Dd(2)} \& \{F\} \\
+  {\mathbb{M}_{1}} \& {\mathcal{U}}
+  \arrow["{\pr_1}", from=1-1, to=1-2]
+  \arrow["{\mathbb{A}_{1}}"', from=1-1, to=2-1]
+  \arrow["{}", from=1-2, to=2-2]
   \arrow["{\flat_F}", shorten <=11pt, shorten >=11pt, Rightarrow, from=1-2, to=2-1]
   \arrow[from=2-1, to=2-2]
 \end{tikzcd}\]
-the filler \( \flat_F \) is called a \defemph{flatness structure for the face \( F \)}, and its ending path (the holonomy around the boundary) is called \defemph{the \( k \)-curvature at the face \( F \)}.
+\end{column}
+\end{columns}
+\onslide<2->{\( T_1(\partial(F)) \) is \defemph{the curvature at the face \( F \)} and the filler \( \flat_F:\id=T_1(\partial F) \) is called a \defemph{flatness structure for the face \( F \)}.}
+
+\onslide<3->{The distinction between the path \( \flat_F \) and the endpoint \( T_1(\partial(F)) \) is small enough to be confusing.}
 \end{mydef}
 \end{frame}
-\begin{frame}
-With these definitions we have now achieved one of our main goals.
 
-Without a definition of Euler characterisitc we can't prove Gauss-Bonnet.
-
-But once we add vector fields there is a lot more to say.
-\end{frame}
+% \begin{frame}
+% With these definitions we have now achieved one of our main goals.
+% 
+% On to vector fields.
+% \end{frame}
 
